Update config handling and add .env.example for API keys
Refactored Ethereum client initialization to use the entire config object instead of just the Infura API key. Introduced a `.env.example` file to provide a template for API keys and database configuration. Updated `docker-compose.yml` to load environment variables dynamically for better security and flexibility.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,8 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - ETHERSCAN_API_KEY=ZENXIVWGUS7MTH3WWRMAYUK9HIPYZRUNUF
+      - ETHERSCAN_API_KEY=${ETHERSCAN_API_KEY}
+      - INFURA_API_KEY=${INFURA_API_KEY}
       - DB_URI=postgresql://pujithm:postgres@db:5432/uniswap-fee-tracker
     depends_on:
       db:
