Add API keys as environment variables in CI workflow
Included INFURA_API_KEY and ETHERSCAN_API_KEY using GitHub Secrets to ensure sensitive data is securely managed. This update enhances the CI configuration by providing necessary credentials for tests.

--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -12,6 +12,10 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    env:
+      INFURA_API_KEY: ${{ secrets.INFURA_API_KEY }}  # Use GitHub Secrets for sensitive data
+      ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
