Update environment variable for database connection
Replaced `DATABASE_URL` with `DB_URI` in the GitHub Actions workflow configuration. This standardizes the naming convention for environment variables, ensuring consistency across the project.

--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -15,7 +15,7 @@ jobs:
     env:
       INFURA_API_KEY: ${{ secrets.INFURA_API_KEY }}
       ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
-      DATABASE_URL: postgres://postgres:postgres@localhost:5432/testdb
+      DB_URI: postgres://postgres:postgres@localhost:5432/testdb
 
     services:
       postgres:
